# fastapi_instagram

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  docker-compose.yaml  pyproject.toml
app/: base.py  config.py  db.py  main.py
app/auth/: models.py  routes.py  schemas.py  services.py
app/migrations/: env.py
app/migrations/versions/: 22d727ccd5c9_added_user_model.py
app/users/: routers.py  schemas.py
backend/: Dockerfile  base.py  config.py  db.py  main.py  pyproject.toml
backend/auth/: models.py  routes.py  schemas.py  services.py
backend/core/: services.py
backend/migrations/: env.py
backend/migrations/versions/: 01ba21ba0b95_post_models_init.py  1e6869d821d7_adding_image_to_post.py  5935858e17bc_updated_user_model_added_username_field.py
backend/post/: models.py  routes.py  schemas.py  services.py
backend/posts/: models.py  routes.py  schemas.py  services.py
docs/: technical_requirements.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.vue  main.js  utils.js
frontend/src/assets/css/: index.css
frontend/src/components/: HelloWorld.vue
frontend/src/layouts/: EmptyLayout.vue
frontend/src/router/: index.js
frontend/src/views/: SignIn.vue  SignUp.vue
